--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install:
 
 script:
     - docker run -e CI=true mariathar/docker-react npm run test
+
+deploy:
+    provider: elastickbeanstalk
+    region: "us-east-2"
+    app: "docker"
+    env: "Docker-env"
+    bucket_name: "elasticbeanstalk-us-east-2-578048377849"
+    bucket_path: "docker"
+    on:
+      branch: master
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
